// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ELASTIC_CLOUD instructions when isCloudEnabled is true 1`] = `
<EuiPage
  className="home"
>
  <div
    className="kuiViewContent kuiViewContent--constrainedWidth"
  >
    <a
      className="kuiLink"
      href="#/home"
    >
      Home
    </a>
     / 
    <a
      className="kuiLink"
      href="#/home/tutorial_directory"
    >
      Add Data
    </a>
    <div>
      <Introduction
        description="tutorial used to drive jest tests"
        title="jest test tutorial"
      />
      <div
        className="text-center"
      />
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InstructionSet
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "elasticCloud instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </div>
</EuiPage>
`;

exports[`should render ON_PREM instructions with instructions cloud toggle when isCloudEnabled is false 1`] = `
<EuiPage
  className="home"
>
  <div
    className="kuiViewContent kuiViewContent--constrainedWidth"
  >
    <a
      className="kuiLink"
      href="#/home"
    >
      Home
    </a>
     / 
    <a
      className="kuiLink"
      href="#/home/tutorial_directory"
    >
      Add Data
    </a>
    <div>
      <Introduction
        description="tutorial used to drive jest tests"
        title="jest test tutorial"
      />
      <div
        className="text-center"
      >
        <RadioButtonGroup
          buttons={
            Array [
              Object {
                "dataTestSubj": "onPremBtn",
                "label": "On premise",
                "onClick": [Function],
              },
              Object {
                "dataTestSubj": "onPremElasticCloudBtn",
                "label": "Elastic Cloud",
                "onClick": [Function],
              },
            ]
          }
          selectedBtnLabel="On premise"
        />
      </div>
      <EuiSpacer
        size="l"
      />
      <EuiPanel
        grow={true}
        hasShadow={false}
        paddingSize="l"
      >
        <InstructionSet
          instructionVariants={
            Array [
              Object {
                "id": "platform id",
                "instructions": Array [
                  Object {
                    "title": "onPrem instructions",
                  },
                ],
              },
            ]
          }
          key="0"
          offset={1}
          paramValues={Object {}}
          replaceTemplateStrings={[Function]}
          setParameter={[Function]}
          title="Instruction title"
        />
      </EuiPanel>
    </div>
  </div>
</EuiPage>
`;
